--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,7 +71,7 @@ uuid = { version = "1", default-features = false }
 xxhash-rust = { version = "^0.8", default-features = false, features = ["xxh3"] }
 
 [build-dependencies]
-cc = { version = "=1.2.1" } # aarch64-linux-musl link errors
+cc = { version = "1"  }
 pyo3-build-config = { path = "include/pyo3/pyo3-build-config" }
 version_check = { version = "0.9" }
 
